WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
117580
[GTK] media/video-seek-multiple.html is failing
https://bugs.webkit.org/show_bug.cgi?id=117580
Summary
[GTK] media/video-seek-multiple.html is failing
Zan Dobersek
Reported
2013-06-13 01:17:39 PDT
The media/video-seek-multiple.html layout test is failing since introduced in
r150929
.
http://trac.webkit.org/changeset/150929
--- /home/slave/webkitgtk/gtk-linux-64-release/build/layout-test-results/media/video-seek-multiple-expected.txt +++ /home/slave/webkitgtk/gtk-linux-64-release/build/layout-test-results/media/video-seek-multiple-actual.txt @@ -9,6 +9,6 @@ EVENT(seeked) EXPECTED (video.seeking == 'false') OK -EXPECTED (video.currentTime == '2') OK +EXPECTED (video.currentTime == '2'), OBSERVED '1.5' FAIL END OF TEST
Attachments
Patch
(3.52 KB, patch)
2013-07-02 03:58 PDT
,
Miguel Gomez
no flags
Details
Formatted Diff
Diff
Patch
(3.74 KB, patch)
2013-07-02 07:37 PDT
,
Miguel Gomez
no flags
Details
Formatted Diff
Diff
Archive of layout-test-results from APPLE-EWS-1 for win-future
(843.13 KB, application/zip)
2013-07-04 12:17 PDT
,
Build Bot
no flags
Details
Show Obsolete
(1)
View All
Add attachment
proposed patch, testcase, etc.
Miguel Gomez
Comment 1
2013-07-02 03:58:03 PDT
Created
attachment 205886
[details]
Patch
Miguel Gomez
Comment 2
2013-07-02 07:37:10 PDT
Created
attachment 205913
[details]
Patch
Build Bot
Comment 3
2013-07-04 12:17:07 PDT
Comment on
attachment 205913
[details]
Patch
Attachment 205913
[details]
did not pass win-ews (win): Output:
http://webkit-queues.appspot.com/results/991150
New failing tests: fast/forms/select/popup-closes-on-blur.html
Build Bot
Comment 4
2013-07-04 12:17:09 PDT
Created
attachment 206111
[details]
Archive of layout-test-results from APPLE-EWS-1 for win-future The attached test failures were seen while running run-webkit-tests on the win-ews. Bot: APPLE-EWS-1 Port: win-future Platform: CYGWIN_NT-6.1-WOW64-1.7.20-0.266-5-3-i686-32bit
Miguel Gomez
Comment 5
2013-07-19 02:33:53 PDT
The patch touches code in the gstreamer backend of the media player only, so it cannot be related to the reported fail in the windows port
Philippe Normand
Comment 6
2013-07-19 02:37:55 PDT
(In reply to
comment #5
)
> The patch touches code in the gstreamer backend of the media player only, so it cannot be related to the reported fail in the windows port
Right, the Apple EWS is flaky these days... Will review your patch now :)
Philippe Normand
Comment 7
2013-07-19 03:07:22 PDT
Comment on
attachment 205913
[details]
Patch Ok that change makes sense indeed! Thanks Miguel :)
WebKit Commit Bot
Comment 8
2013-07-19 03:30:12 PDT
Comment on
attachment 205913
[details]
Patch Clearing flags on attachment: 205913 Committed
r152893
: <
http://trac.webkit.org/changeset/152893
>
WebKit Commit Bot
Comment 9
2013-07-19 03:30:15 PDT
All reviewed patches have been landed. Closing bug.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug