[GTK] media/video-seek-multiple.html is failing https://bugs.webkit.org/show_bug.cgi?id=117580

Patch by Miguel Gomez <magomez@igalia.com> on 2013-07-19
Reviewed by Philippe Normand.

Source/WebCore:

When receiving several seek calls in a row, ensure that the final position
is the one requested in the last call received.

Already covered in test media/video-seek-multiple.html

* platform/graphics/gstreamer/MediaPlayerPrivateGStreamer.cpp:
(WebCore::MediaPlayerPrivateGStreamer::seek):

LayoutTests:

Change expectation for media/video-seek-multiple.html test

* platform/gtk/TestExpectations:

Canonical link: https://commits.webkit.org/136747@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@152893 268f45cc-cd09-0410-ab3c-d52691b4dbfc